--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -16,7 +16,7 @@ env:
   Image: 'saloyiana/demo-app'
   Tag: 'v1.0.0'
   ProjectName: 'demo-app'
-  HelmchartPath: 'charts/demo-app'
+  HelmchartPath: 'chart/demo-app'
 
 
 jobs:
