--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -16,12 +16,13 @@ env:
   Image: 'saloyiana/demo-app'
   Tag: 'v1.0.0'
   ProjectName: 'demo-app'
-  HelmchartPath: 'chart/demo-app'
+  HelmchartPath: '$GITHUB_WORKSPACE/chart/demo-app'
 
 
 jobs:
   # This workflow contains a single job called "build"
   build:
+    name: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -71,7 +72,9 @@ jobs:
 
       # Build image
       - name: build image
-        run: docker build -f Dockerfile -t ${{ env.Image }}:${{ env.Tag }} app/
+        run: |
+          pwd
+          docker build -f Dockerfile -t ${{ env.Image }}:${{ env.Tag }} $GITHUB_WORKSPACE/app/
 
       # Image scan
       - name: image scan
@@ -114,6 +117,7 @@ jobs:
           echo -c $Passphrase | docker sign -t ${{ env.Image }}:${{ env.Tag }}
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
