--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -112,7 +112,7 @@ jobs:
       # Push image
       - name: push image
         run: | 
-          docker push -t ${{ env.Image }}:${{ env.Tag }}
+          docker push ${{ env.Image }}:${{ env.Tag }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
