--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -128,8 +128,8 @@ jobs:
 
       - name: update tag
         run: |
-          sed -i "s/repository:.*/repository:\ ${{ env.Image }}/g" ${{ env.HelmchartPath }}/values.yaml
-          sed -i "s/tag:.*/tag:\ "${{ env.Tag }}"/g" ${{ env.HelmchartPath }}/values.yaml
+          sed -i 's/repository:.*/repository:\ ${{ env.Image }}/' ${{ env.HelmchartPath }}/values.yaml
+          sed -i 's/tag:.*/tag:\ "${{ env.Tag }}"/' ${{ env.HelmchartPath }}/values.yaml
           
       - name: GIT commit and push all changed files
         env: 
