--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -150,10 +150,12 @@ jobs:
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "username@users.noreply.github.com"
           git branch
-          git checkout test-env
+          git pull origin test-env
+          git branch
+          git checkout -b test-env
           git add ${{ env.HelmchartPath }}/values.yaml
           git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
-          git push
+          git push -u origin test-env
 
       # DAST
       - name: dast
