--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -146,11 +146,10 @@ jobs:
         env: 
           CI_COMMIT_MESSAGE: release with tag ${{ env.Tag }}
           CI_COMMIT_AUTHOR: CI/CD
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "username@users.noreply.github.com"
-          git remote set-url --push origin https://saloyiana:${{ env.GITHUB_TOKEN }}@github.com/DevSecOps-CI-CD-Pipelines          
+          git remote set-url --push origin https://saloyiana:$GITHUB_TOKEN@github.com/DevSecOps-CI-CD-Pipelines          
           git branch
           git pull origin test-env
           git branch
