--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -151,7 +151,8 @@ jobs:
           CI_COMMIT_MESSAGE: release with tag ${{ env.Tag }}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "cd/cd"
+          git config --local user.name "github-actions[bot]"
+          git pull origin test-env
           git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
     
       - name: Push changes
