--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -150,8 +150,8 @@ jobs:
         env: 
           CI_COMMIT_MESSAGE: release with tag ${{ env.Tag }}
         run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git pull origin test-env
           git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
     
