--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -158,7 +158,8 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PAT }}
-          branch: origin/test-env
+          branch: test-env
+#           branch: refs/heads/test-env
 
       # DAST
       - name: dast
