--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -159,10 +159,9 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          force: true
           github_token: ${{ secrets.PAT }}
-#           branch: test-env
-          branch: refs/heads/test-env
+          branch: test-env
+          force: true
 
       # DAST
       - name: dast
@@ -181,4 +180,5 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PAT }}
-          branch: refs/heads/prod-env
+          branch: prod-env
+          force: true
