--- a/.github/workflows/demo-cicd.yml
+++ b/.github/workflows/demo-cicd.yml
@@ -65,7 +65,9 @@ jobs:
 #           sudo chmod +x "/usr/local/bin/ws"
 #           echo "run scan"
 #           ws scan
-          
+      - name: WhiteSource CI integration
+        uses: Idancc/WhiteSource-CI-Integration@v2.6
+
       # Dependenies check
       - name: sast
         run: |
