--- a/.github/workflows/demo-ci.yml
+++ b/.github/workflows/demo-ci.yml
@@ -67,8 +67,16 @@ jobs:
 #           ws scan
       - name: WhiteSource CI integration
         uses: Idancc/WhiteSource-CI-Integration@v2.6
+        
+      - name: dep-scan
+        uses: AppThreat/dep-scan-action@v1.0.0
+      
+      - name: Official SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v1.2.0
+  
+      - name: SonarQube Quality Gate Check
+        uses: SonarSource/sonarqube-quality-gate-action@v1.1.0
 
-      # Dependenies check
       - name: sast
         run: |
           echo "we can use sonarqube" 
@@ -100,12 +108,6 @@ jobs:
           framework: kubernetes
         continue-on-error: true
         
-      # Sign image prepration
-#       - name: upload key
-#         run: |
-#           docker login -u -p 
-#           docker push -t ${{ env.Image }}:${{ env.Tag }}
-  
       # Docker login
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -113,12 +115,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
   
-#       # Push image
-#       - name: push image
-#         run: | 
-#           docker push ${{ env.Image }}:${{ env.Tag }}
-    
-      - name: docker-sign
+      - name: docker-sign-push
         uses: sudo-bot/action-docker-sign@latest
         with:
           image-ref: ${{ env.Image }}:${{ env.Tag }}
@@ -133,7 +130,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # project deploy to test
+      # project deploy to test ( push based deployment )
 #       - name: project deploy
 #         run: |
 #           helm upgarde --wait --install ${{ env.ProjectName }} ${{ env.HelmchartPath }} \
@@ -141,14 +138,15 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
-          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
+          persist-credentials: false 
+          fetch-depth: 0 
+          
       - name: update tag
         run: |
           sed -i 's/repository:.*/repository:\ "saloyiana\/demo-app"/g' ${{ env.HelmchartPath }}/values.yaml
           sed -i 's/tag:.*/tag:\ "${{ env.Tag }}"/g' ${{ env.HelmchartPath }}/values.yaml
 
-      - name: commit changes
+      - name: update tag
         env: 
           CI_COMMIT_MESSAGE: release with tag ${{ env.Tag }}
         run: |
@@ -158,6 +156,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git commit -a -m "${{ env.CI_COMMIT_MESSAGE }}"
           echo ${{ github.ref }}
+  
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
@@ -172,7 +171,7 @@ jobs:
       - name: performance test
         run: echo "run test"  
         
-      # project deploy to prod
+      # project deploy to prod ( push based deployment )
 #       - name: project deploy
 #         run: |
 #           helm upgarde --wait --install ${{ env.ProjectName }} ${{ env.HelmchartPath }} \
