--- a/.github/workflows/demo-ci.yml
+++ b/.github/workflows/demo-ci.yml
@@ -65,8 +65,9 @@ jobs:
 #           sudo chmod +x "/usr/local/bin/ws"
 #           echo "run scan"
 #           ws scan
-      - name: WhiteSource CI integration
-        uses: Idancc/WhiteSource-CI-Integration@v2.6
+
+#       - name: WhiteSource CI integration
+#         uses: Idancc/WhiteSource-CI-Integration@v2.6
         
       - name: dep-scan
         uses: AppThreat/dep-scan-action@v1.0.0
