--- a/.github/workflows/demo-ci.yml
+++ b/.github/workflows/demo-ci.yml
@@ -71,13 +71,10 @@ jobs:
         
       - name: dep-scan
         uses: AppThreat/dep-scan-action@v1.0.0
-      
-#       - name: Official SonarQube Scan
-#         uses: SonarSource/sonarqube-scan-action@v1.2.0
-  
-      - name: SonarQube Quality Gate Check
-        uses: SonarSource/sonarqube-quality-gate-action@v1.1.0
 
+      - name: sast-scan
+        uses: AppThreat/sast-scan-action@1.0.2
+    
       - name: sast
         run: |
           echo "we can use sonarqube" 
